wcserver/delphi/lib/wcsgate.pas

//------------------------------------------------------------------------
// Delphi Wildcat! SDK API v6.0.451.1
// Copyright (c) 1998-2004 Santronics Software, Inc. All Rights Reserved.
//
// DO NOT EDIT THIS FILE!!!
// Automatically generated from wcsgate.h by cpp2pas.
//------------------------------------------------------------------------
{$O+,F+,I-,S-,R-}
unit wcsgate;

interface

{$IFDEF WIN32}
uses windows, wctype, wcgtype;
{$ELSE}
uses WinTypes, wctype, wcgtype;
{$ENDIF}


//! Group: Configuration Gateway SDK Functions

function GateGetQwkHostCount: DWORD; stdcall; external 'wcsgate.dll';
function GateGetQwkHostByIndex(index: DWORD; var host: TGateQwkHost): BOOL; stdcall; external 'wcsgate.dll';
function GateGetQwkHostByName(const hostname: PChar; var host: TGateQwkHost): BOOL; stdcall; external 'wcsgate.dll';
function GateAddQwkHost(const host: TGateQwkHost; var index: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateUpdateQwkHost(index: DWORD; const host: TGateQwkHost): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveQwkHost(index: DWORD): BOOL; stdcall; external 'wcsgate.dll';

function GateGetQwkConf(const hostname: PChar; conference: DWORD; var conf: TGateQwkConf): BOOL; stdcall; external 'wcsgate.dll';
function GateGetQwkHubConf(const hostname: PChar; hubconference: DWORD; var conf: TGateQwkConf): BOOL; stdcall; external 'wcsgate.dll';
function GateSetQwkConf(const hostname: PChar; conference: DWORD; const conf: TGateQwkConf): BOOL; stdcall; external 'wcsgate.dll';
function GateUnsetQwkConf(const hostname: PChar; conference: DWORD): BOOL; stdcall; external 'wcsgate.dll';

function GateGetQwkHighMessage(const hostname: PChar; conf: DWORD): DWORD; stdcall; external 'wcsgate.dll';
function GateSetQwkHighMessage(const hostname: PChar; conf: DWORD; id: DWORD): BOOL; stdcall; external 'wcsgate.dll';

function GateGetTaglineList(taglist: PChar; size: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateGetTagline(tag: char; tagimport: PChar; tagexport: PChar; size: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateSetTagline(tag: char; const tagimport: PChar; const tagexport: PChar): BOOL; stdcall; external 'wcsgate.dll';

function GateGetUucpConfig(var config: TGateUucpConfig): BOOL; stdcall; external 'wcsgate.dll';
function GateUpdateUucpConfig(const config: TGateUucpConfig): BOOL; stdcall; external 'wcsgate.dll';

function GateGetUucpHostCount: DWORD; stdcall; external 'wcsgate.dll';
function GateGetUucpHost(index: DWORD; var host: TGateUucpHost): BOOL; stdcall; external 'wcsgate.dll';
function GateAddUucpHost(const host: TGateUucpHost; var index: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateUpdateUucpHost(index: DWORD; const host: TGateUucpHost): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveUucpHost(index: DWORD): BOOL; stdcall; external 'wcsgate.dll';

function GateGetUucpHighMessage(conf: DWORD): DWORD; stdcall; external 'wcsgate.dll';
function GateSetUucpHighMessage(conf: DWORD; id: DWORD): BOOL; stdcall; external 'wcsgate.dll';

function GateIsNewsgroupSubscribed(const host: PChar; const newsgroup: PChar): BOOL; stdcall; external 'wcsgate.dll';
function GateAddNewsgroup(const host: PChar; const newsgroup: PChar): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveNewsgroup(const host: PChar; const newsgroup: PChar): BOOL; stdcall; external 'wcsgate.dll';

function GateGetAutoResponseCount: DWORD; stdcall; external 'wcsgate.dll';
function GateGetAutoResponseName(index: Dword; var name: TGateAutoResponseName): Boolean; stdcall; external 'wcsgate.dll';
function GateGetAutoResponseText(const name: PChar; text: PChar): BOOL; stdcall; external 'wcsgate.dll';
function GateSetAutoResponse(const name: PChar; const text: PChar; var index: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveAutoResponse(const name: PChar): BOOL; stdcall; external 'wcsgate.dll';

function GateGetMailingListCount: DWORD; stdcall; external 'wcsgate.dll';
function GateGetMailingList(index: DWORD; var ml: TGateMailingList): BOOL; stdcall; external 'wcsgate.dll';
function GateAddMailingList(const ml: TGateMailingList; var index: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateUpdateMailingList(index: DWORD; const ml: TGateMailingList): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveMailingList(index: DWORD): BOOL; stdcall; external 'wcsgate.dll';

const WC_QWK_TRANSLATE_BASE                 =  $00010000;
const WC_UUCP_TRANSLATE_BASE                =  $00020000;

function GateGetHostTranslateCount(host: DWORD): DWORD; stdcall; external 'wcsgate.dll';
function GateGetHostTranslate(host: DWORD; index: DWORD; var te: TGateTranslateEntry): BOOL; stdcall; external 'wcsgate.dll';
function GateAddHostTranslate(host: DWORD; const te: TGateTranslateEntry; var index: DWORD): BOOL; stdcall; external 'wcsgate.dll';
function GateUpdateHostTranslate(host: DWORD; index: DWORD; const te: TGateTranslateEntry): BOOL; stdcall; external 'wcsgate.dll';
function GateRemoveHostTranslate(host: DWORD; index: DWORD): BOOL; stdcall; external 'wcsgate.dll';

implementation

end.
